[package]
name = "mdbook-plus"
version = "0.1.0"
authors = ["Joe Mooney <joe.mooney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "0.3"
pulldown-cmark = "0.7.0"
pulldown-cmark-to-cmark = "4.0.2"
env_logger = "0.7.1"
log = "0.4"
clap = "2.33"
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
env_logger = "0.7.1"